erDiagram
    USER {
        string id PK
        string email
        string password
        string firstName
        string lastName
        string role
        boolean isActive
        date createdAt
        date updatedAt
    }

    PRODUCT {
        string id PK
        string name
        string description
        float price
        int stockQuantity
        array categories
        date createdAt
        date updatedAt
    }

    ORDER {
        string id PK
        string userId FK
        array items
        float totalAmount
        string status
        date createdAt
        date updatedAt
    }

    PAYMENT {
        string id PK
        string orderId FK
        float amount
        string status
        string paymentMethod
        date createdAt
        date updatedAt
    }

    NOTIFICATION {
        string id PK
        string userId FK
        string type
        string message
        boolean isRead
        date createdAt
    }

    USER ||--o{ ORDER : places
    ORDER ||--o{ PAYMENT : has
    USER ||--o{ NOTIFICATION : receives 